# pr2_speech

./: manifest.xml  recog_command.launch
capture/: CMakeLists.txt  Makefile  capalsa.c  makefile  readdata.c
capture/src/: CMakeLists.txt  capture.c  readdata.c  utils.c  utils.h
corpus/: simple  simple.dic  simple.lm  simple.log_pronounce  simple.sent  simple.vocab
doc/final/: final.tex  makefile  mybib.bib  nav_commands.dic  nav_commands.lm  project.bib
doc/final/fig/: samquan.gp  window.gp
doc/sem1/: pres.tex
indep/: recog.py
localization/: localize.n  plotaudio.py  record.n
pcmio/: CMakeLists.txt
pcmio/cmake/Modules/: FindITPP.cmake
pcmio/doc/: config
pcmio/src/: CMakeLists.txt  audioica.cpp  chanfilter.c  convert.c  gsttest.c  readdata.c  utils.c  utils.h
